--- a/Official HotMug App®/locations.plist
+++ b/Official HotMug App®/locations.plist
@@ -225,7 +225,7 @@
 	<key>21</key>
 	<dict>
 		<key>address</key>
-		<string>Cabra Verde</string>
+		<string>Cabra Verde Cafe</string>
 		<key>name</key>
 		<string>1 Peter Lane, York YO1 8SW, England</string>
 		<key>x</key>
